--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <title>React Thinknetica Shop</title>
 </head>
 <body>
-<div id="root"></div>
-<script src="./index.js"></script>
+  <div class="container">
+    <header>
+      <h1>React Shop</h1>
+    </header>
+    <div id="root"></div>
+    <script src="./index.js"></script>
+  </div>
 </body>
 </html>
